# bitcoin-quantization-cpp

./: CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h
cmake/modules/: FindVSqlite.cmake
comm/: config.cpp  config.h
market/: CMakeLists.txt  fake.cpp  fake.h  market.cpp  market.h  okex_api.cpp  okex_api.h
market/market_impl/: market_impl.h
market/okex/: CMakeLists.txt  okex.cpp  okex.h
notifier/: CMakeLists.txt  dingding.cpp  dingding.h  notifier.cpp  notifier.h  wework.cpp  wework.h
notifier/dingding/: CMakeLists.txt  dingding.cpp  dingding.h
notifier/notifier_impl/: notifier_impl.h
notifier/wework/: CMakeLists.txt  wework.cpp  wework.h
strategy/: strategy.h
strategy/grid_trading/: CMakeLists.txt  trading.cpp  trading.h
